Dev fix: Column reordering could cause columns which weren't in the list of columns for column visibility to be shown.
- This fix addresses that, but it also results in the buttons being
  shown in their original order rather than in the new order. That will
  need to be addressed with another commit

Sync to source repo @325a071b834a71479e15a721dcbae7800fbc1a5e

--- a/css/buttons.dataTables.css
+++ b/css/buttons.dataTables.css
@@ -65,16 +65,16 @@ a.dt-button.disabled {
   cursor: default;
   background-color: #f9f9f9;
   /* Fallback */
-  background-image: -webkit-linear-gradient(top, #ffffff 0%, #f9f9f9 100%);
+  background-image: -webkit-linear-gradient(top, white 0%, #f9f9f9 100%);
   /* Chrome 10+, Saf5.1+, iOS 5+ */
-  background-image: -moz-linear-gradient(top, #ffffff 0%, #f9f9f9 100%);
+  background-image: -moz-linear-gradient(top, white 0%, #f9f9f9 100%);
   /* FF3.6 */
-  background-image: -ms-linear-gradient(top, #ffffff 0%, #f9f9f9 100%);
+  background-image: -ms-linear-gradient(top, white 0%, #f9f9f9 100%);
   /* IE10 */
-  background-image: -o-linear-gradient(top, #ffffff 0%, #f9f9f9 100%);
+  background-image: -o-linear-gradient(top, white 0%, #f9f9f9 100%);
   /* Opera 11.10+ */
-  background-image: linear-gradient(top, #ffffff 0%, #f9f9f9 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#ffffff', EndColorStr='#f9f9f9');
+  background-image: linear-gradient(top, white 0%, #f9f9f9 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='white', EndColorStr='#f9f9f9');
 }
 button.dt-button:active:not(.disabled), button.dt-button.active:not(.disabled),
 div.dt-button:active:not(.disabled),
@@ -224,6 +224,7 @@ div.dt-button-collection.fixed {
   top: 50%;
   left: 50%;
   margin-left: -75px;
+  border-radius: 0;
 }
 div.dt-button-collection.fixed.two-column {
   margin-left: -150px;
